# ft_ls

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  author
includes/: flags.h  ft_ls.h  ls.h  nodes.h  print.h  print_col.h  print_line.h  srcs.h
src/: ls_strcmp.c  main.c  parse_args.c  parse_flags.c  print_args.c
src/flags/: del_flags.c  flags_error.c  get_flag.c  init_flags.c  parse_flags.c
src/nodes/: cmp_nodes.c  del_node.c  get_dir_node.c  get_error_node.c  get_file_node.c  get_node.c  init_node.c
src/parse_argc/: parse_argc.c
src/parse_args/: parse_args.c
src/parse_flags/: init_flags.c
src/print/: init_dir_path.c  print_col.c  print_col_right.c  print_dir_head.c  print_dir_node.c  print_error.c  print_error_node.c  print_file_node.c  print_name.c  print_name_endl.c  print_node.c  print_srcs.c  print_srcs_1perl.c  print_srcs_col.c
src/print/col/: del_col_attr.c  get_max_name.c  get_print_col.c  init_col_attr.c  print_src.c  print_srcs_col.c  print_srcs_row.c  walk_srcs_col.c
src/print/line/: get_human_readable.c  get_max_values.c  print._gid.c  print_date.c  print_gid.c  print_link.c  print_mode.c  print_name.c  print_nlink.c  print_size.c  print_srcs_line.c  print_total.c  print_uid.c
src/srcs/: cmp_srcs.c  del_src.c  get_srcs.c  init_src.c
